Updated to fix center alignment of images

--- a/css-exercise-four/css/style.css
+++ b/css-exercise-four/css/style.css
@@ -39,12 +39,14 @@ img {
 
 @media screen and (min-width: 575px)
 {
+  section {
+    text-align: center;
+  }
   div {
+    display: inline-block;
+    padding: 5px;
     width: 38%;
     border: 5px solid #000000;
-  }
-  section {
-    float: left;
   }
 }
 
